# denario2

./: .env.template  Cargo.toml  README_4_development.md
migrations/2023-06-11-010148_create_records/: up.sql
migrations/2023-06-11-011216_create_credits/: up.sql
src/: main.rs  schema.rs
src/app/: app_config.rs  app_seeder.rs  app_setup.rs  app_status.rs  db_conn.rs  mod.rs
src/core/: app_core_config.rs  db_manager_core.rs  feature_core.rs  mod.rs
src/core/helpers/: fsmaker.rs  mod.rs
src/features/: categories.rs  credits.rs  mod.rs  records.rs
src/models/: categories_model.rs  credits_model.rs  records_model.rs
