[package]
name = "denario"
authors = ["elanticrypt0"]
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.3.0"
argon2 = "0.5.0"
chrono = { version = "0.4.23", features = ["serde"] }
diesel = {version ="2.1.0", features = ["postgres", "r2d2", "uuid", "chrono"]}
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
r2d2 = "0.8.10"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
